# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "time-robust-forest"
version = "0.1.14"
description = "Explores time information to train a robust random forest"
readme = "README.md"
authors = [
  "lgmoneda <lgmoneda@gmail.com>"
]
license = "BSD-3"
repository = "https://github.com/lgmoneda/time-robust-forest"
homepage = "https://github.com/lgmoneda/time-robust-forest"

# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
"time-robust-forest" = "time_robust_forest.__main__:app"

[tool.poetry.dependencies]
python = "^3.9.12"
importlib_metadata = {version = ">=1.6,<5.0", python = "<=3.9.12"}
typer = {extras = ["all"], version = "^0.3.2"}
rich = ">=9.8.2,<11.0.0"
numpy = "1.23.0"
pandas = "1.1.3"
scikit-learn = "1.1.0"

[tool.poetry.dev-dependencies]
darglint = "^1.5.8"
isort = "^5.7.0"
pyupgrade = "^2.7.4"
black = "^21.6b0"
mypy = "^0.902"
bandit = "^1.7.0"
safety = "^1.10.3"
pytest = "^6.2.1"
pylint = "^2.6.0"
pydocstyle = "^6.1.1"
pre-commit = "^2.9.3"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py39"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
